# python-package-starter

./: README.md  RELEASE.md  pyproject.toml
src/package_name/: cli.py
